# alfred-bookmarks

./: README.md  info.plist  pyproject.toml  todo.md
src/: add.py  classes.py  confirmed.py  constants.py  db.py  main.py  migrations.py  parse.py  remove.py  work.py
src/apps/: __init__.py  base.py  browser.py  files.py  github.py  reddit.py  shortcuts.py  youtube.py
src/bookmarks/: base.py  types.py
src/database/: db.py  migrations.py
tests/: test_main.py
